[package]
author = ["Fabio Kleis <fabiohkrc@gmail.com>"]
name = "rldap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ldap3 = { version = "0.11.1" }
openssl = { version = "0.10.45", features = [ "vendored" ] }
